@@ -1,5 +1,5 @@
 # Editor release-wide properties
-editor.release.number=1.4.4_20061019
+editor.release.number=1.4.4_20061020
 editor.contributors=Lindsay Bradford, Moe Wyn
 compatible.engine.release.number=Beta 7.2.1
 compatible.java.release.number=1.4.2_08
